--- a/Final 1/index.html
+++ b/Final 1/index.html
@@ -302,7 +302,7 @@ _________________________________________________________ -->
                     <div class="item">
                         <img src="img/main-slider1.jpg" alt="" class="img-responsive">
                     </div>
-                    <div class="item">
+                    <!-- <div class="item">
                         <img class="img-responsive" src="img/main-slider2.jpg" alt="">
                     </div>
                     <div class="item">
@@ -311,7 +311,7 @@ _________________________________________________________ -->
                     <div class="item">
                         <img class="img-responsive" src="img/main-slider4.jpg" alt="">
                     </div>
-                </div>
+                </div> -->
                 <!-- /#main-slider -->
             </div>
         </div>
@@ -324,7 +324,7 @@ _________________________________________________________ -->
             <div class="box">
                 <div class="container">
                     <div class="col-md-12">
-                        <h2>Hot this week</h2>
+                        <h2>Let's Re<b>build</b>. Together</h2>
                     </div>
                 </div>
             </div>
@@ -714,7 +714,7 @@ _________________________________________________________ -->
     <!-- /new_arrivals -->
     <div class="new_arrivals_agile_w3ls_info"> 
         <div class="container">
-            <h3 class="wthree_text_info">Products</h3>     
+            <h2 class="col-md-12" class="wthree_text_info">Products</h2>     
                 <div id="horizontalTab">
                        
                     <div class="resp-tabs-container">
