--- a/Final 1/register.html
+++ b/Final 1/register.html
@@ -7,12 +7,12 @@
     <meta name="robots" content="all,follow">
     <meta name="googlebot" content="index,follow,snippet,archive">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Obaju e-commerce template">
-    <meta name="author" content="Ondrej Svestka | ondrejsvestka.cz">
+    <meta name="description" content="Webstars e-commerce template">
+    <meta name="author" content="Webstars">
     <meta name="keywords" content="">
 
     <title>
-        Obaju : e-commerce template
+        Builders : e-commerce template
     </title>
 
     <meta name="keywords" content="">
@@ -242,8 +242,7 @@
                         <h1>New account</h1>
 
                         <p class="lead">Not our registered customer yet?</p>
-                        <p>With registration with us new world of fashion, fantastic discounts and much more opens to you! The whole process will not take you more than a minute!</p>
-                        <p class="text-muted">If you have any questions, please feel free to <a href="contact.html">contact us</a>, our customer service center is working for you 24/7.</p>
+                        
 
                         <hr>
 
@@ -253,12 +252,46 @@
                                 <input type="text" class="form-control" id="name">
                             </div>
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="text" class="form-control" id="email">
+                                <select>   
+                                        <option value="" disabled="disabled" selected="selected">Please select your skills</option>
+                                      <option value="skill1">Construction</option>
+                                      <option value="skill1">Sculpting</option>
+                                      <option value="skill1">Crafting</option>
+                                      <option value="skill1">Wood work</option>
+                                      <option value="skill1">Moulding</option>
+                                      <option value="skill1">knitting</option>
+                                      <option value="skill1">Iron Smithing</option>
+                                </select>
+                                </div>
+                                <div class="form-group">
+                                 <label for="Address">Address</label>
+                                <input type="text" class="form-control" id="address">
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
                                 <input type="password" class="form-control" id="password">
+                            </div>
+                            <div class="form-group">
+                                <label for="products">Products</label>
+                                <select>   
+                                        <option value="" disabled="disabled" selected="selected">Construction</option>
+                                      <option value="skill1">Houses</option>
+                                      <option value="skill1">Bridges</option>
+                                </select>
+                                <select>   
+                                        <option value="" disabled="disabled" selected="selected">Wood Work</option>
+                                      <option value="skill1">Chairs</option>
+                                      <option value="skill1">Tables</option>
+                                </select>
+                                <select>   
+                                        <option value="" disabled="disabled" selected="selected">Sculpting</option>
+                                      <option value="skill1">Sculptures</option>
+                                 </select>     
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="products-images">Images</label>
+                                <input type="file" name="img" multiple>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary"><i class="fa fa-user-md"></i> Register</button>
@@ -272,15 +305,11 @@
                         <h1>Login</h1>
 
                         <p class="lead">Already our customer?</p>
-                        <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                            mi vitae est. Mauris placerat eleifend leo.</p>
-
-                        <hr>
-
+                       
                         <form action="customer-orders.html" method="post">
                             <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="text" class="form-control" id="email">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" id="name">
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
